<resources>
    <string name="app_name" translatable="false">Muslim Prayer - Quran Compass</string>
    <string name="string_this_action_can_contain_ads">This action can contain ads</string>
    <string name="string_language">Language</string>
    <string name="string_next">Next</string>
    <string name="string_permission">Permission</string>
    <string name="string_allow_per_we_muslim">Muslim Prayer - Quran Compass requires permission to use the device’s location, appear on top and notification (with android 13 and above)</string>
    <string name="string_location">Location</string>
    <string name="string_appear_on_top">Appear on top</string>
    <string name="string_allow_notification">Allow notification</string>
    <string name="string_you_need_to_accept_full_permission">You need to accept full permission to use the app</string>
    <string name="string_you_need_to_enable_permission_to_use_this_features">You need to enable permission to use this features</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_save">Save</string>
    <string name="string_juristic_method">Juristic Method</string>
    <string name="string_adjust_islamic_calendar">Adjust Islamic Calendar</string>
    <string name="string_azkar">Azkar</string>
    <string name="string_daily_dhikr">Daily Dhikr</string>
    <string name="string_daily_dhikr_1">Darood-E-Ibraheemi</string>
    <string name="string_daily_dhikr_2">Apter Salah(Preyer) Tasbeeh</string>
    <string name="string_daily_dhikr_3">Everyday Duas</string>
    <string name="string_daily_dhikr_4">Before Starting Anything</string>
    <string name="string_daily_dhikr_5">For This Word And The Aakhira</string>
    <string name="string_daily_dhikr_6">For Protection And Help From Allah</string>
    <string name="string_daily_dhikr_7">Reward Of One-Third Of Quran</string>
    <string name="string_daily_rememberence">Daily Rememberence</string>
    <string name="string_daily_rememberence_1">Morning Rememberence</string>
    <string name="string_daily_rememberence_2">Evening Rememberence</string>
    <string name="string_after_prayer">After Prayers</string>
    <string name="string_after_prayer_1">After Salah (Prayer) Tasbeeh</string>
    <string name="string_after_prayer_2">After Prayer Remembrances</string>
    <string name="string_after_prayer_3">Offer Salah Regularly</string>
    <string name="string_after_prayer_4">For Protection And Help From Allah</string>
    <string name="string_Rizq_sustenance">Rizq (Sustenance)</string>
    <string name="string_Rizq_sustenance_1">For Rizq (Sustenance)</string>
    <string name="string_Rizq_sustenance_2">When You Are In Need</string>
    <string name="string_Rizq_sustenance_3">For Forgiveness And Allah’s Mercy</string>
    <string name="string_Rizq_sustenance_4">For Praising Allah</string>
    <string name="string_Rizq_sustenance_5">For Success</string>
    <string name="string_knowledge">Knowledge</string>
    <string name="string_knowledge_1">Increase In Knowledge</string>
    <string name="string_knowledge_2">Grant Me Confidence And Eloquence</string>
    <string name="string_knowledge_3">For Protection From Ignorance</string>
    <string name="string_knowledge_4">Protection From Foolishness</string>
    <string name="string_faith">Faith</string>
    <string name="string_faith_1">Strengthen Your Imaan</string>
    <string name="string_faith_2">To Make Us Practicing Muslims</string>
    <string name="string_faith_3">Seek Forgiveness And Strengthen Your Imaan</string>
    <string name="string_faith_4">Pledge To Allah</string>
    <string name="string_faith_5">For Righteous Company</string>
    <string name="string_day_of_judgement">Day Of Judgement</string>
    <string name="string_day_of_judgement_1">For This World And The Aakhira</string>
    <string name="string_day_of_judgement_2">Seek Forgiveness And Protection From Hell</string>
    <string name="string_day_of_judgement_3">For Forgiveness For Your Parent And All Muslims</string>
    <string name="string_day_of_judgement_4">For Jannah</string>
    <string name="string_forgiveness">Forgiveness</string>
    <string name="string_forgiveness_1">Seek Forgiveness And Strengthen Your Imaan</string>
    <string name="string_forgiveness_2">For Forgiveness</string>
    <string name="string_forgiveness_3">For Forgiveness And Allah’s Mercy</string>
    <string name="string_forgiveness_4">Seek Forgiveness And Protection From Hell</string>
    <string name="string_forgiveness_5">For Forgiveness For Your Parent And All Muslims</string>
    <string name="string_forgiveness_6">Forgiveness For Your Siblings</string>
    <string name="string_forgiveness_7">For Asking Forgiveness For Yourself And Anyone Who Enters Your House</string>
    <string name="string_forgiveness_8">For Repentance</string>
    <string name="string_forgiveness_9">Strengthen Your Imaan</string>
    <string name="string_forgiveness_10">Seek Allah’s Satisfaction</string>
    <string name="string_praising_allah">Praising Allah</string>
    <string name="string_praising_allah_1">For Praising And Glorifying Allah</string>
    <string name="string_praising_allah_2">For Thanking Allah</string>
    <string name="string_praising_allah_3">For Being Grateful To Allah</string>
    <string name="string_praising_allah_4">On Hearing Good News</string>
    <string name="string_praising_allah_5">For Rizq (Sustenance)</string>
    <string name="string_praising_allah_6">For Leaving Everything In The Hands Of Allah</string>
    <string name="string_protection">Protection</string>
    <string name="string_protection_1">Protection And Help From Allah</string>
    <string name="string_protection_2">Seek Forgiveness And Protection From Hell</string>
    <string name="string_protection_3">For Protection From Satan/Shaytan</string>
    <string name="string_protection_4">For Protection From The Evil Eye</string>
    <string name="string_protection_5">To Keep Your Family Safe From Transgressors</string>
    <string name="string_protection_6">For Your Child’s Protection</string>
    <string name="string_protection_7">For Protection From Oppressors</string>
    <string name="string_protection_8">For Protection Against Enemies</string>
    <string name="string_protection_9">For Curbing Fear</string>
    <string name="string_protection_10">For Protection From The Wrongdoers</string>
    <string name="string_protection_11">For Parents</string>
    <string name="string_protection_12">For Fear Of Committing Shirk</string>
    <string name="string_protection_13">For This Wolrd And The Aakhira</string>
    <string name="string_protection_14">To Be A Pious Muslim</string>
    <string name="string_protection_15">For Righteous Company</string>
    <string name="string_protection_16">Protection From Natural Disasters &amp; Calamities</string>
    <string name="string_family">Family</string>
    <string name="string_family_1">For Parent</string>
    <string name="string_family_2">For Forgiveness For Your Parents And All Muslims</string>
    <string name="string_family_3">Forgiviness For You Siblings</string>
    <string name="string_family_4">For A Blissfull Family</string>
    <string name="string_family_5">Asking Allah To Grant You A Child</string>
    <string name="string_family_6">For Your Child’s Protection</string>
    <string name="string_health_liness">Health / Iiness</string>
    <string name="string_health_liness_1">For A Healthy Life</string>
    <string name="string_health_liness_2">When Visiting The Sick</string>
    <string name="string_health_liness_3">To Alleviate Pain</string>
    <string name="string_health_liness_4">During Illness</string>
    <string name="string_health_liness_5">Upon Seeing Someone Going Through A Trial Or Tribulation</string>
    <string name="string_health_liness_6">If You Fall On Hard Times</string>
    <string name="string_health_liness_7">When You Are Nearing Your Death</string>
    <string name="string_health_liness_8">When Visiting Graves</string>
    <string name="string_loss_failure">Loss / Failure</string>
    <string name="string_loss_failure_1">When You Fail Or Lose At Something</string>
    <string name="string_loss_failure_2">When A Loss Occurs</string>
    <string name="string_loss_failure_3">When Stricken By Tragedy</string>
    <string name="string_loss_failure_4">Upon Seeing Someone Going Through A Trial Or Tribulation</string>
    <string name="string_loss_failure_5">For Seeking Allah’s Help</string>
    <string name="string_sorrow_joy">Sorrow / Joy</string>
    <string name="string_sorrow_joy_1">At Time Of Worry And Sorry</string>
    <string name="string_sorrow_joy_2">When In Distress</string>
    <string name="string_sorrow_joy_3">For Overcoming Your Weaknesses</string>
    <string name="string_sorrow_joy_4">When Striken by Tragedy</string>
    <string name="string_sorrow_joy_5">Upon Seeing Someone Going Through A Trial Or Tribulation</string>
    <string name="string_sorrow_joy_6">On Hearing A Bad News</string>
    <string name="string_sorrow_joy_7">If You Fall On Hard Times</string>
    <string name="string_sorrow_joy_8">For Patience During Difficult Times</string>
    <string name="string_sorrow_joy_9">When Someone Insults You</string>
    <string name="string_sorrow_joy_10">When Feeling Frightened</string>
    <string name="string_sorrow_joy_11">For Protection From The Wrongdoers</string>
    <string name="string_sorrow_joy_12">For Seeking Allah’s Help</string>
    <string name="string_sorrow_joy_13">To Trust Upon Allah</string>
    <string name="string_sorrow_joy_14">On Hearing Good News</string>
    <string name="string_sorrow_joy_15">When Someone Praises You</string>
    <string name="string_patience">Patience</string>
    <string name="string_patience_1">For Patience</string>
    <string name="string_patience_2">For Patience During Difficult Times</string>
    <string name="string_patience_3">For Controlling Your Anger</string>
    <string name="string_patience_4">When Someone Insults You</string>
    <string name="string_debt">Debt</string>
    <string name="string_debt_1">Settle A Debt</string>
    <string name="string_debt_2">For Someone Who Lens You Money</string>
    <string name="string_debt_3">For Success</string>
    <string name="string_debt_4">For Rizq (Sustenance)</string>
    <string name="string_exit">Exit</string>
    <string name="SUN" translatable="false">Sun</string>
    <string name="MON" translatable="false">Mon</string>
    <string name="TUE" translatable="false">Tue</string>
    <string name="WED" translatable="false">Wed</string>
    <string name="THU" translatable="false">Thu</string>
    <string name="FRI" translatable="false">Fri</string>
    <string name="SAT" translatable="false">Sat</string>
    <string name="string_are_you_sure_exit_the_app">Are you sure exit the app?</string>
    <string name="exit_the_app_title">Exit the app?</string>
    <string name="what_problems_you_encounter_during_use">What problems you encounter during use</string>
    <string name="restart">Restart</string>
    <string name="explore">Explore</string>
    <string name="still_uninstall">Still uninstall</string>
    <string name="why_uninstall_application">Why uninstall application</string>
    <string name="difficult_to_use">Difficult to use</string>
    <string name="too_many_ads">Too many ads</string>
    <string name="others">Others</string>
    <string name="please_enter_the_reason_why_uninstall_application">Please enter the reason why uninstall application</string>
    <string name="don_t_uninstall_yet">Don\'t uninstall yet</string>
    <string name="loading_0">Loading (0%)...</string>
    <string name="prayer_reminder_not_working">Prayer reminder not working</string>
    <string name="qibla_compass_not_working">Qibla Compass not working</string>
    <string name="uninstall">Uninstall</string>
</resources>