<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/legendLayout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_40sdp"
    android:layout_marginTop="@dimen/_10sdp"
    android:background="@drawable/shape_bg_color_white_corner_10"
    android:gravity="center"
    android:orientation="horizontal">

    <com.qibla.muslimday.app2025.customeview.textprimarygradient.TextViewPrimaryGradient
        android:id="@+id/legendText1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:textSize="@dimen/text_middle"
        tools:text="@string/SUN" />

    <com.qibla.muslimday.app2025.customeview.textprimarygradient.TextViewPrimaryGradient
        android:id="@+id/legendText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:textSize="@dimen/text_middle"
        tools:text="@string/MON" />

    <com.qibla.muslimday.app2025.customeview.textprimarygradient.TextViewPrimaryGradient
        android:id="@+id/legendText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:textSize="@dimen/text_middle"
        tools:text="@string/TUE" />

    <com.qibla.muslimday.app2025.customeview.textprimarygradient.TextViewPrimaryGradient
        android:id="@+id/legendText4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:textSize="@dimen/text_middle"
        tools:text="@string/WED" />

    <com.qibla.muslimday.app2025.customeview.textprimarygradient.TextViewPrimaryGradient
        android:id="@+id/legendText5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:textSize="@dimen/text_middle"
        tools:text="@string/THU" />

    <com.qibla.muslimday.app2025.customeview.textprimarygradient.TextViewPrimaryGradient
        android:id="@+id/legendText6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:textSize="@dimen/text_middle"
        tools:text="@string/FRI" />

    <com.qibla.muslimday.app2025.customeview.textprimarygradient.TextViewPrimaryGradient
        android:id="@+id/legendText7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:textSize="@dimen/text_middle"
        tools:text="@string/SAT" />
</LinearLayout>