<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/what_problems_you_encounter_during_use"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/img_back" />

    <RelativeLayout
        android:id="@+id/layout_reason_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_exit_app"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_header">


        <TextView
            android:id="@+id/tv_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="10dp"
            android:layout_toStartOf="@+id/btn_start"
            android:text="@string/prayer_reminder_not_working"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btn_start"
            android:layout_width="120dp"
            android:layout_height="46dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/bg_gradient_colormain_16dp"
            android:gravity="center"
            android:text="@string/restart"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_reason_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_exit_app"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_reason_1">


        <TextView
            android:id="@+id/tv_reason2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="10dp"
            android:layout_toStartOf="@+id/btn_start2"
            android:text="@string/qibla_compass_not_working"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btn_start2"
            android:layout_width="120dp"
            android:layout_height="46dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/bg_gradient_colormain_16dp"
            android:gravity="center"
            android:text="@string/explore"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_still_uninstall"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_margin="12dp"
        android:background="@drawable/bg_exit_app"
        android:gravity="center"
        android:text="@string/still_uninstall"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btn_dont_uninstall"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_gradient_colormain_16dp"
        android:text="@string/don_t_uninstall_yet"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_still_uninstall" />

    <RelativeLayout
        android:id="@+id/rl_native"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@id/btn_dont_uninstall"
        app:layout_constraintStart_toStartOf="parent">

        <FrameLayout
            android:id="@+id/fr_native_ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/layout_shimer_native_new" />
        </FrameLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
