<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:background="@drawable/shape_bg_color_white_corner_16"
        android:padding="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/content_rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:text="@string/exit_the_app_title"
            android:textColor="@color/color_2D3640"
            android:textSize="@dimen/_17ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvExitDes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:gravity="center"
            android:text="@string/string_are_you_sure_exit_the_app"
            android:textColor="@color/color_2D3640"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/content_rate" />


        <RelativeLayout
            android:id="@+id/rl_native"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_yes">

            <FrameLayout
                android:id="@+id/fr_native_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include layout="@layout/layout_shimer_native_new" />

            </FrameLayout>
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            android:background="@drawable/shape_stroke_color_ebeff2_corner_16"
            android:fontFamily="@font/inter_bold"
            android:text="@string/string_exit"
            android:textAllCaps="false"
            android:textColor="@color/color_2D3640"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvExitDes" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/shape_gradient_color_0e8c62_008040_corner_16"
            android:fontFamily="@font/inter_bold"
            android:text="@string/string_cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_yes"
            app:layout_constraintTop_toBottomOf="@+id/tvExitDes" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>